--- a/yew-app/Cargo.toml
+++ b/yew-app/Cargo.toml
@@ -8,7 +8,7 @@ edition = "2021"
 
 [dependencies]
 # this is the development version of Yew
-yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
-gloo = "0.10"
+yew = { version = "^0.20", features = ["csr"] }
+#gloo = "0.10"
 js-sys = "0.3"
 wasm-bindgen = "0.2"
